txt-output/68.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: there are several ways to fix the program. No oracle given.            
idEq = \ x -> x == [x]

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\68.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\68.hs:6:20:
    Occurs check: cannot construct the infinite type: t = [t]
      Expected type: t
      Inferred type: [t]
    In the expression: x
    In the second argument of `(==)', namely `[x]'


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\68.hs, ill-typed\68.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\68.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\68.hs:6:21: error:
    * Couldn't match expected type `a' with actual type `[a]'
      `a' is a rigid type variable bound by
        the inferred type of idEq :: [a] -> Bool
        at ill-typed\68.hs:6:1-22
    * In the expression: x
      In the second argument of `(==)', namely `[x]'
      In the expression: x == [x]
    * Relevant bindings include
        x :: [a] (bound at ill-typed\68.hs:6:10)
        idEq :: [a] -> Bool (bound at ill-typed\68.hs:6:1)
  |
6 | idEq = \ x -> x == [x]
  |                     ^
